k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ti-platform
  labels:
    name: ti-platform
