k8s/file-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-server-deployment
  namespace: ti-platform
  labels:
    app: file-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-server
  template:
    metadata:
      labels:
        app: file-server
    spec:
      containers:
      - name: file-server
        image: s3rbvn/file-server:latest
        ports:
        - containerPort: 5600
        volumeMounts:
        - name: shared-storage
          mountPath: /shared
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: shared-files-pvc
