k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mda-platform-ingress
  namespace: mda-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: mda-platform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-web-service
            port:
              number: 3000
      - path: /api/backend
        pathType: Prefix
        backend:
          service:
            name: main-backend-service
            port:
              number: 7070
      - path: /api/files
        pathType: Prefix
        backend:
          service:
            name: file-server-service
            port:
              number: 5600
      - path: /api/messaging
        pathType: Prefix
        backend:
          service:
            name: messaging-service
            port:
              number: 4070
      - path: /api/deployments
        pathType: Prefix
        backend:
          service:
            name: deployments-service
            port:
              number: 5090
